gac_sb/objects/INNOprojet__c.object
<CustomObject>
    <fields>
        <fullName>Chef_de_projet__c</fullName>
        <label>Chef de projet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Département</label>
        <referenceTo>INNOdepartement__c</referenceTo>
        <relationshipName>Projets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Difficultes_techniques__c</fullName>
        <inlineHelpText>Difficultés techniques / Incertitudes technologiques</inlineHelpText>
        <label>Difficultés techniques</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Etat_de_art__c</fullName>
        <inlineHelpText>Etat de l&apos;art / Motivations à l&apos;origine du projet</inlineHelpText>
        <label>Etat de l&apos;art</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existence_documents_justificatifs__c</fullName>
        <inlineHelpText>Existence de documents justificatifs et nature</inlineHelpText>
        <label>Existence de documents justificatifs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option1__c</fullName>
        <description>Calculé automatiquement en fonction des dépenses de personnel rattachées au projet</description>
        <label>Heures R&amp;D option 1</label>
        <summarizedField>INNOpersonnelToProjet__c.Heures_RD_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.Type_projet__c</field>
            <operation>equals</operation>
            <value>projet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.UniteTempsDepensesPersonnel2__c</field>
            <operation>equals</operation>
            <value>Heures</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOpersonnelToProjet__c.Projet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option2__c</fullName>
        <description>Calculé automatiquement en fonction des dépenses de personnel rattachées au projet</description>
        <label>Heures R&amp;D option 2</label>
        <summarizedField>INNOpersonnelToProjet__c.Heures_RD_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.Type_projet__c</field>
            <operation>equals</operation>
            <value>projet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.UniteTempsDepensesPersonnel2__c</field>
            <operation>equals</operation>
            <value>Heures</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOpersonnelToProjet__c.Projet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option3__c</fullName>
        <description>Calculé automatiquement en fonction des dépenses de personnel rattachées au projet</description>
        <label>Heures R&amp;D option 3</label>
        <summarizedField>INNOpersonnelToProjet__c.Heures_RD_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.Type_projet__c</field>
            <operation>equals</operation>
            <value>projet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.UniteTempsDepensesPersonnel2__c</field>
            <operation>equals</operation>
            <value>Heures</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOpersonnelToProjet__c.Projet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <label>Id d&apos;import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jours_RD_option1__c</fullName>
        <label>Jours R&amp;D option 1</label>
        <summarizedField>INNOpersonnelToProjet__c.Heures_RD_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.Type_projet__c</field>
            <operation>equals</operation>
            <value>projet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.UniteTempsDepensesPersonnel2__c</field>
            <operation>equals</operation>
            <value>Jours</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOpersonnelToProjet__c.Projet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jours_RD_option2__c</fullName>
        <label>Jours R&amp;D option 2</label>
        <summarizedField>INNOpersonnelToProjet__c.Heures_RD_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.Type_projet__c</field>
            <operation>equals</operation>
            <value>projet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.UniteTempsDepensesPersonnel2__c</field>
            <operation>equals</operation>
            <value>Jours</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOpersonnelToProjet__c.Projet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jours_RD_option3__c</fullName>
        <label>Jours R&amp;D option 3</label>
        <summarizedField>INNOpersonnelToProjet__c.Heures_RD_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.Type_projet__c</field>
            <operation>equals</operation>
            <value>projet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOpersonnelToProjet__c.UniteTempsDepensesPersonnel2__c</field>
            <operation>equals</operation>
            <value>Jours</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOpersonnelToProjet__c.Projet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nom_regroupement_projet__c</fullName>
        <description>Si le projet est inclus dans un ensemble de projets, on saisi le nom de cet ensemble</description>
        <inlineHelpText>Si le projet est inclus dans un ensemble de projets, précisez le nom de cet ensemble.</inlineHelpText>
        <label>Nom du regroupement de projet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_projet__c</fullName>
        <label>N° de projet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objectifs_projet__c</fullName>
        <inlineHelpText>Objectifs du projet / Buts techniques visés</inlineHelpText>
        <label>Objectifs du projet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prod_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Prod Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Progres_accomplis__c</fullName>
        <inlineHelpText>Progrès accomplis / Avancée des connaissances</inlineHelpText>
        <label>Progrès accomplis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travaux_menes__c</fullName>
        <inlineHelpText>Travaux menés : Grandes orientations et étapes</inlineHelpText>
        <label>Travaux menés</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Champ invisible pour l&apos;utilisateur, permet de savoir si l&apos;enregistrement est un &quot;vrai&quot; projet ou si c&apos;est un enregistrement qui est la juste pour rattacher des dépenses de personnel aux veilles, PM de brevet ou normalisation</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>projet</fullName>
                    <default>true</default>
                    <label>projet</label>
                </value>
                <value>
                    <fullName>veille</fullName>
                </value>
                <value>
                    <fullName>brevetPM</fullName>
                </value>
                <value>
                    <fullName>normalisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valorisation__c</fullName>
        <label>Valorisation</label>
        <referenceTo>INNOvalo__c</referenceTo>
        <relationshipName>Projets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Projet</label>
    <nameField>
        <label>Nom du projet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>